--- a/JavaScript/JavaScript Fundamentals - Part 1/index.html
+++ b/JavaScript/JavaScript Fundamentals - Part 1/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div class="title">
-			Hello, goorm!
-		</div>
+		<h1>JavaScript Fundamentals - Part 1</h1>		
+		<script src="javascript.js"></script>
 	</body>
+	
 </html>
