--- a/JavaScript/JavaScript Fundamentals - Part 2/Fundamentals_Part2.html
+++ b/JavaScript/JavaScript Fundamentals - Part 2/Fundamentals_Part2.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href ="style.css">
+		<link rel="stylesheet" href ="Style_Part2.css">
 	</head>
 	<body>
 		<h1>JavaScript Fundamentals - Part 2</h1>
-		<script src="javascript.js"></script>
+		<script src="Js_Part2.js"></script>
 	</body>	
 </html>
