--- a/JavaScript/JavaScript Fundamentals - Part 1/Fundamentals_Part1.html
+++ b/JavaScript/JavaScript Fundamentals - Part 1/Fundamentals_Part1.html
@@ -1,1 +1,11 @@
-Loading Data...
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href ="Style_Part1.css">
+	</head>
+	<body>
+		<h1>JavaScript Fundamentals - Part 1</h1>
+		<script src="Js_Part1.js"></script>
+	</body>	
+</html>
