--- a/JavaScript/JavaScript in the Brower Dom and Events/Guess_My_Number.html
+++ b/JavaScript/JavaScript in the Brower Dom and Events/Guess_My_Number.html
@@ -21,9 +21,9 @@
 				<button class="btn check">Check!</button>
 			</section>
 			<section class="right">
-				<p class="message">Start guessing</p>
-				<p class="label -score">Score: <span class="score">20</span></p>
-				<p class="label -highscroe">Highscore: <span class="highscroe">0</span></p>
+				<p class="message">Start guessing...</p>
+				<p class="label-score">Score: <span class="score">20</span></p>
+				<p class="label-highscroe">Highscore: <span class="highscroe">0</span></p>
 			</section>
 			<script src="Js_Guess.js"></script>
 		</main>
